lib: Fix mixed declarations and code

"ISO C90 forbids mixed declarations and code"

https://bugzilla.gnome.org/show_bug.cgi?id=784050